# DPDK-RoutingAwareShaper

./: README.md  inter_site_experiments_large_topology.ipynb  inter_site_experiments_reduced_topology_single_tunnel.ipynb  same-site-3-nodes-same-host-DPDK-template.ipynb
DaaS/PoCPhase3/: meson.build
DaaS/PoCPhase3/common/: OrionDefs.h  OrionDpdk.h  OrionLog.h  OrionP4Int.h  OrionPktDefs.h  OrionPktHdrs.h  OrionTMInt.h  StdPktHdrs.h  common.h
DaaS/PoCPhase3/tm10/: dumpLib.c  dumpLib.h  meson.build  parserCfgIntf.c  parserCfgSched.c  parserCfgStream.c  parserCmdline.c  parserLib.c  parserLib.h  tmBundle.c  tmBundle.h  tmDefs.h  tmEthdev.c  tmFlow.c  tmFlow.h  tmMain.c  tmSched.c  tmStats.c  tmStats.h  tmStreams.c
DaaS/PoCPhase3/tm10/cfg/tm10/: intf-v2.cfg  intf.cfg  user_01_tm-rev.cfg  user_01_tm01_10flow.cfg  user_01_tm01_1flow.cfg  user_01_tm01_3flow.cfg  user_01_tm01_99flow.cfg
DaaS/PoCPhase3/tm10/tm10_scripts/: run_tm10-v2.sh  run_tm10.sh  run_tm10.test.sh
node_tools/: host_tune.sh  set_hdisc.sh  set_qdisc.sh
node_toolsv2/: apply_vfio_settings.sh  dpdk.sh  fw.sh  grub.sh  install.sh  pktgen.sh
utils/: set_scaling_governor.sh  show_scaling_governor.sh
