# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2017 Intel Corporation
#
#              © 2020-2025 Nokia
#              Licensed under the BSD 3-Clause Clear License
#              SPDX-License-Identifier: BSD-3-Clause-Clear
#
# meson file, for building this example as part of a main DPDK build.
#
#
sources = files(
	'dumpLib.c',
	'parserCfgIntf.c',
	'parserCfgSched.c',
	'parserCfgStream.c',
	'parserCmdline.c',
	'parserLib.c',
	'tmEthdev.c',
	'tmBundle.c',
	'tmFlow.c',
	'tmSched.c',
	'tmStats.c',
	'tmStreams.c',
	'tmMain.c'
)
